+ bottom navigation + settings screen + favorites screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">CleanArcExm</string>
+
+    <string name="menu_main">Main</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_favorites">Favorites</string>
 </resources>
